[gd_scene load_steps=23 format=3 uid="uid://dkharnqg0wlgl"]

[ext_resource type="Script" path="res://Scripts/Enemy/Elite.gd" id="1_dxp60"]
[ext_resource type="Texture2D" uid="uid://bj28itms41ovk" path="res://Assets/Kenney_Tiny_Dungeon/Tiles/tile_0097.png" id="2_dgkbu"]
[ext_resource type="Texture2D" uid="uid://gy4601icaaos" path="res://Assets/Kenney_Tiny_Dungeon/Tiles/tile_0118.png" id="3_dvuw3"]
[ext_resource type="Script" path="res://Scripts/Hurtbox.gd" id="4_s4p1f"]
[ext_resource type="Script" path="res://Scripts/States/StateIdle.gd" id="5_vo0k0"]
[ext_resource type="Script" path="res://Scripts/States/StateStaggered.gd" id="6_7ux35"]
[ext_resource type="Script" path="res://Scripts/States/StateMoving.gd" id="9_2djc4"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeKnockback.gd" id="10_41h4i"]
[ext_resource type="Script" path="res://Scripts/States/StateAttackSequence.gd" id="10_t8ul7"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeDamage.gd" id="11_di4fm"]
[ext_resource type="Script" path="res://Scripts/States/Attack.gd" id="11_ib48r"]
[ext_resource type="Script" path="res://Scripts/AI_States/AI_ChargeAttack.gd" id="12_b05uu"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeDeflect.gd" id="12_fdj58"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2631f"]
radius = 15.0

[sub_resource type="Animation" id="Animation_0na2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon_root:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weapon_root/weapon_offset:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("weapon_root/weapon_offset:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"enable_hurtbox"
}]
}

[sub_resource type="Animation" id="Animation_s6ojg"]
resource_name = "attack_leap"
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_root/weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, -5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_root/weapon_offset:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.56, 0.62, 0.7, 0.78, 0.86, 0.94, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785397, 0.785397, -0.906229, -2.35619, -4.31551, -6.26573, -8.63938, -10.5994, -12.5489]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.98),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"enable_hurtbox"
}, {
"args": [false],
"method": &"enable_hurtbox"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("States/StateAttackSequence2/1:displacement")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.505, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 5.0, 5.0]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["swing2"],
"method": &"play_sound"
}]
}

[sub_resource type="Animation" id="Animation_s1yo0"]
resource_name = "attack_single_1"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_root/weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_root/weapon_offset:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, -0.785397]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.68),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"enable_hurtbox"
}, {
"args": [false],
"method": &"enable_hurtbox"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["swing"],
"method": &"play_sound"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("States/StateAttackSequence/1:displacement")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 4.0]
}

[sub_resource type="Animation" id="Animation_n4tr0"]
resource_name = "idle"
length = 0.75
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_root:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_oec8n"]
resource_name = "moving"
length = 0.5
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_root:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, -0.261799, 0.261799]
}

[sub_resource type="Animation" id="Animation_vp3k3"]
resource_name = "staggered"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.57079, 3.14159, 4.71238, 6.28318]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["enemy_hurt"],
"method": &"play_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cd3yn"]
_data = {
"RESET": SubResource("Animation_0na2m"),
"attack_leap": SubResource("Animation_s6ojg"),
"attack_single_1": SubResource("Animation_s1yo0"),
"idle": SubResource("Animation_n4tr0"),
"moving": SubResource("Animation_oec8n"),
"staggered": SubResource("Animation_vp3k3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2bevh"]

[node name="Elite" type="CharacterBody2D" node_paths=PackedStringArray("anim_player", "hurtbox", "attack_audio_player", "weapon_root", "weapon_offset", "current_state")]
collision_layer = 2
script = ExtResource("1_dxp60")
approach_distance_min = 50
approach_distance_max = 150
base_health = null
base_movement_speed = 0.6
mod_movement_speed = null
mod_attack_damage = null
hitbox_layer = 2
hurtbox_mask = 3
get_hit_cooldown_max = null
anim_player = NodePath("AnimationPlayer")
hurtbox = NodePath("weapon_root/weapon_offset/weapon_parent/hurtbox_Area2D")
attack_audio_player = NodePath("AudioStreamPlayer2D")
weapon_root = NodePath("weapon_root")
weapon_offset = NodePath("weapon_root/weapon_offset")
current_state = NodePath("States/idle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2631f")

[node name="sprite_offset" type="Node2D" parent="CollisionShape2D"]
position = Vector2(0, -1)

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D/sprite_offset"]
texture_filter = 1
texture_repeat = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_dgkbu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cd3yn")
}

[node name="weapon_root" type="Node2D" parent="."]

[node name="weapon_offset" type="Node2D" parent="weapon_root"]

[node name="weapon_parent" type="Node2D" parent="weapon_root/weapon_offset"]
position = Vector2(0, 24)

[node name="Sprite2D" type="Sprite2D" parent="weapon_root/weapon_offset/weapon_parent"]
rotation = 3.14159
scale = Vector2(1.11812, 1.11812)
texture = ExtResource("3_dvuw3")

[node name="hurtbox_Area2D" type="Area2D" parent="weapon_root/weapon_offset/weapon_parent"]
position = Vector2(0, 1)
collision_layer = 2
collision_mask = 0
script = ExtResource("4_s4p1f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapon_root/weapon_offset/weapon_parent/hurtbox_Area2D"]
shape = SubResource("CircleShape2D_2bevh")

[node name="States" type="Node" parent="."]

[node name="idle" type="Node" parent="States"]
script = ExtResource("5_vo0k0")

[node name="staggered" type="Node" parent="States"]
script = ExtResource("6_7ux35")
state_time_max = 0.5

[node name="StateMoving" type="Node" parent="States"]
script = ExtResource("9_2djc4")

[node name="StateAttackSequence" type="Node" parent="States"]
script = ExtResource("10_t8ul7")

[node name="1" type="Node" parent="States/StateAttackSequence" node_paths=PackedStringArray("anim_player")]
script = ExtResource("11_ib48r")
anim_player = NodePath("../../../AnimationPlayer")
animation_name = "attack_single_1"
damage = 2
stagger = 2
knockback = 5
next_attack_delay = 1.5

[node name="StateAttackSequence2" type="Node" parent="States"]
script = ExtResource("10_t8ul7")

[node name="1" type="Node" parent="States/StateAttackSequence2" node_paths=PackedStringArray("anim_player")]
script = ExtResource("11_ib48r")
anim_player = NodePath("../../../AnimationPlayer")
animation_name = "attack_leap"
damage = 4
stagger = 4
knockback = 5
next_attack_delay = 2.0

[node name="Events" type="Node" parent="."]

[node name="take_knockback" type="Node" parent="Events"]
script = ExtResource("10_41h4i")

[node name="take_damage" type="Node" parent="Events"]
script = ExtResource("11_di4fm")

[node name="take_deflect" type="Node" parent="Events"]
script = ExtResource("12_fdj58")

[node name="AI_States" type="Node" parent="."]

[node name="Charge_Attack" type="Node" parent="AI_States"]
script = ExtResource("12_b05uu")
approached_max = 150

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="weapon_root/weapon_offset/weapon_parent/hurtbox_Area2D" to="weapon_root/weapon_offset/weapon_parent/hurtbox_Area2D" method="_on_body_entered"]
